--- a/Proyecto Movil PTC/Dashboard.html
+++ b/Proyecto Movil PTC/Dashboard.html
@@ -10,63 +10,22 @@
 </head>
 
 <body>
-  <header>
-    <div class="navbar">
-      <img class="imagen" src="img/finder.png" alt="Finder">
-
-      <nav>
-        <a href="Dashboard.html">Inicio</a>
-
-        <div class="dropdown">
-          <a>Reservas ⯆</a>
-          <div class="dropdown-content">
-             <a href="MisReservas.html">Mis Reservas</a>
-          </div>
-        </div>
-
-        <div class="dropdown">
-          <a href="#">Servicios ⯆</a>
-          <div class="dropdown-content">
-            <a href="#">Restaurante</a>
-            <a href="#">Eventos</a>
-          </div>
-        </div>
-
-        <a href="#">Reseñas</a>
-        <a href="#">Perfil</a>
-      </nav>
-
-      <div class="hamburger" onclick="toggleMenu()">
-        <img class="icon" src="img/Menu.png" alt="Menu">
-      </div>
+  <nav class="container-fluid nav-container">
+    <div class="logo">
+      <img src="img/finder2.png" alt="Logo" />
     </div>
 
-    <!-- Sidebar para móviles -->
-    <div id="sidebarMobile" class="sidebar-mobile">
-      <h1 style="text-align: center; color: white;"><b>Menu</b></h1>
-      <div class="menu-item">
-        <a style="color: white;" onclick="toggleSubmenu('reservasSubmenu')">Reservas ⯆</a>
-        <div id="reservasSubmenu" class="submenu">
-          <a href="MisReservas.html">Mis Reservas</a>
-        </div>
-      </div>
+    <button class="hamburger" id="hamburger" aria-label="Abrir menú">
+      ☰
+    </button>
 
-      <div class="menu-item">
-        <a href="#" onclick="toggleSubmenu('serviciosSubmenu')">Servicios ⯆</a>
-        <div id="serviciosSubmenu" class="submenu">
-          <a href="#">Restaurante</a>
-          <a href="#">Eventos</a>
-        </div>
-      </div>
-
-      <!-- Otros enlaces normales -->
-      <a href="Dashboard.html">Inicio</a>
-      <a href="#">Reseñas</a>
-      <a href="#">Perfil</a>
-    </div>
-
-
-  </header>
+    <ul class="nav-links" id="nav-links">
+      <li><a href="#">Inicio</a></li>
+      <li><a href="#">Servicios</a></li>
+      <li><a href="#">Nosotros</a></li>
+      <li><a href="#">Contacto</a></li>
+    </ul>
+  </nav>
 
   <main>
     <h1>Mira nuestras habitaciones</h1>
@@ -324,15 +283,6 @@
   <footer class="container-fluid">
     <h3><b>&copy; Derechos Reservados a Finder</b></h3>
   </footer>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q"
-    crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
-    integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
-    crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.min.js"
-    integrity="sha384-7qAoOXltbVP82dhxHAUje59V5r2YsVfBafyUDxEdApLPmcdhBPg1DKg1ERo0BZlK"
-    crossorigin="anonymous"></script>
   <script src="js/Dashboard.js"></script>
 </body>
 
