--- a/Proyecto Movil PTC/Dashboard.html
+++ b/Proyecto Movil PTC/Dashboard.html
@@ -20,10 +20,10 @@
     </button>
 
     <ul class="nav-links" id="nav-links">
-      <li><a href="#">Inicio</a></li>
-      <li><a href="#">Servicios</a></li>
-      <li><a href="#">Nosotros</a></li>
-      <li><a href="#">Contacto</a></li>
+      <li><a style="color: black;" href="Dashboard.html">Inicio</a></li>
+      <li><a style="color: black;" href="MyPerfil.html">Mi Perfil</a></li>
+      <li><a style="color: black;" href="#">Nosotros</a></li>
+      <li><a style="color: black;" href="#">Contacto</a></li>
     </ul>
   </nav>
 
