--- a/Proyecto Movil PTC/Dashboard.html
+++ b/Proyecto Movil PTC/Dashboard.html
@@ -86,6 +86,7 @@
               style="margin-top: -2rem; border-radius: 0 0 1rem 1rem;">
               <div class="d-flex justify-content-between align-items-start mb-2">
                 <div>
+                  <hr>
                   <h5 class="card-title mb-0">Habitación Clásica Con 2 Camas Dobles</h5>
                   <p class="card-subtitle text-muted">Habitación Para 4 personas de 30 metros cuadrados.</p>
                 </div>
@@ -156,6 +157,7 @@
               style="margin-top: -2rem; border-radius: 0 0 1rem 1rem;">
               <div class="d-flex justify-content-between align-items-start mb-2">
                 <div>
+                  <hr>
                   <h5 class="card-title mb-0">Habitación Clásica Con 1 Cama King</h5>
                   <p class="card-subtitle text-muted">Habitación Para 1 o 2 personas con 30 metros cuadrados.</p>
                 </div>
@@ -226,6 +228,7 @@
               style="margin-top: -2rem; border-radius: 0 0 1rem 1rem;">
               <div class="d-flex justify-content-between align-items-start mb-2">
                 <div>
+                  <hr>
                   <h5 class="card-title mb-0">Suite Junior 1 Cama King</h5>
                   <p class="card-subtitle text-muted">Habitación para 1 o 2 personas con 60 metros cuadrados.</p>
                 </div>
@@ -279,6 +282,27 @@
       </div>
     </div>
   </main>
+
+  <div id="reservaActiva" class="card margin" style="display: none;">
+  <h4>Tu próxima reserva</h4>
+  <p><strong>Check-in:</strong> <span id="checkIn"></span></p>
+  <p><strong>Check-out:</strong> <span id="checkOut"></span></p>
+  <p><strong>Huéspedes:</strong> <span id="huespedes"></span></p>
+</div>
+
+
+<button class="Historial-button" id="btnHistorial" title="Ver Historial">
+        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-history-icon lucide-history"><path d="M3 12a9 9 0 1 0 9-9 9.75 9.75 0 0 0-6.74 2.74L3 8"/><path d="M3 3v5h5"/><path d="M12 7v5l4 2"/></svg>
+</button>
+
+    <div id="historialModal" class="historial-modal">
+  <div class="historial-content">
+    <span class="historial-close" id="cerrarHistorial">&times;</span>
+    <h4>🕓 Historial de Reservas</h4>
+    <div id="historialReservas" class="historial-grid"></div>
+  </div>
+</div>
+
 
   <footer class="container-fluid">
     <h3><b>&copy; Derechos Reservados a Finder</b></h3>
