--- a/Proyecto Movil PTC/MyPerfil.html
+++ b/Proyecto Movil PTC/MyPerfil.html
@@ -8,6 +8,25 @@
      <link rel="stylesheet" href="css/MyPerfil.css">
 </head>
 <body>
+  
+  <!--Dashboard-->
+  <nav class="container-fluid nav-container">
+    <div class="logo">
+      <img src="img/finder2.png" alt="Logo" />
+    </div>
+
+    <button class="hamburger" id="hamburger" aria-label="Abrir menú">
+      ☰
+    </button>
+
+    <ul class="nav-links" id="nav-links">
+      <li><a style="color: black;" href="Dashboard.html">Inicio</a></li>
+      <li><a style="color: black;" href="MyPerfil.html">Mi Perfil</a></li>
+      <li><a style="color: black;" href="#">Nosotros</a></li>
+      <li><a style="color: black;" href="#">Contacto</a></li>
+    </ul>
+  </nav>
+
     <main class="container profile-container" id="perfil-container">
     <button class="close-form" id="cerrar-perfil" aria-label="Cerrar perfil">❌</button>
 
