QUE DIOSITO NNOS AGARRE CONFESADOS :)

--- a/Proyecto Movil PTC/MyPerfil.html
+++ b/Proyecto Movil PTC/MyPerfil.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" data-theme="dark">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -22,8 +22,7 @@
     <ul class="nav-links" id="nav-links">
       <li><a style="color: black;" href="Dashboard.html">Inicio</a></li>
       <li><a style="color: black;" href="MyPerfil.html">Mi Perfil</a></li>
-      <li><a style="color: black;" href="#">Nosotros</a></li>
-      <li><a style="color: black;" href="#">Contacto</a></li>
+      <li><a style="color: black;" href="MisReseñas.html">Comentarios</a></li>
     </ul>
   </nav>
 
@@ -40,9 +39,7 @@
 
     <div class="card-grid">
       <section class="card"><strong>Notar información del perfil</strong><span>✅</span></section>
-      <section class="card"><strong>Notificaciones</strong><span>ON</span></section>
       <section class="card"><strong>Idioma</strong><span>English</span></section>
-      <section class="card"><strong>Seguridad</strong><span>✔️</span></section>
       <section class="card"><strong>Tema</strong><span id="theme">Light mode</span></section>
       <section class="card"><strong>Ayuda & Soporte</strong></section>
       <section class="card"><strong>Condiciones</strong></section>
@@ -63,4 +60,5 @@
   <input type="file" id="file-input" accept="image/*" hidden>
 </body>
 <script src="js/MyPerfil.js"></script>
+<script src="js/themes.js"></script>
 </html>
