--- a/Proyecto Movil PTC/Dashboard.html
+++ b/Proyecto Movil PTC/Dashboard.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="es" data-theme="auto">
 
 <head>
   <meta charset="UTF-8">
@@ -22,8 +22,7 @@
     <ul class="nav-links" id="nav-links">
       <li><a style="color: black;" href="Dashboard.html">Inicio</a></li>
       <li><a style="color: black;" href="MyPerfil.html">Mi Perfil</a></li>
-      <li><a style="color: black;" href="#">Nosotros</a></li>
-      <li><a style="color: black;" href="#">Contacto</a></li>
+      <li><a style="color: black;" href="MisReseñas.html">Comentarios</a></li>
     </ul>
   </nav>
 
@@ -99,19 +98,19 @@
             <!-- Características -->
             <div class="row text-center mb-3 mt-3">
               <div class="col-3 d-flex flex-column align-items-center gap-1" style="font-size: 0.9rem;">
-                <span>🛏️</span>
+                <span><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-bed-icon lucide-bed"><path d="M2 4v16"/><path d="M2 8h18a2 2 0 0 1 2 2v10"/><path d="M2 17h20"/><path d="M6 8v9"/></svg></span>
                 <small>2 Camas</small>
               </div>
               <div class="col-3 d-flex flex-column align-items-center gap-1" style="font-size: 0.9rem;">
-                <span>🍽️</span>
+                <span><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-cup-soda-icon lucide-cup-soda"><path d="m6 8 1.75 12.28a2 2 0 0 0 2 1.72h4.54a2 2 0 0 0 2-1.72L18 8"/><path d="M5 8h14"/><path d="M7 15a6.47 6.47 0 0 1 5 0 6.47 6.47 0 0 0 5 0"/><path d="m12 8 1-6h2"/></svg></span>
                 <small>Desayuno</small>
               </div>
               <div class="col-3 d-flex flex-column align-items-center gap-1" style="font-size: 0.9rem;">
-                <span>❄️</span>
+                <span><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-air-vent-icon lucide-air-vent"><path d="M18 17.5a2.5 2.5 0 1 1-4 2.03V12"/><path d="M6 12H4a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h16a2 2 0 0 1 2 2v5a2 2 0 0 1-2 2h-2"/><path d="M6 8h12"/><path d="M6.6 15.572A2 2 0 1 0 10 17v-5"/></svg></span>
                 <small>AC</small>
               </div>
               <div class="col-3 d-flex flex-column align-items-center gap-1" style="font-size: 0.9rem;">
-                <span>🏊‍♂️</span>
+                <span><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-waves-icon lucide-waves"><path d="M2 6c.6.5 1.2 1 2.5 1C7 7 7 5 9.5 5c2.6 0 2.4 2 5 2 2.5 0 2.5-2 5-2 1.3 0 1.9.5 2.5 1"/><path d="M2 12c.6.5 1.2 1 2.5 1 2.5 0 2.5-2 5-2 2.6 0 2.4 2 5 2 2.5 0 2.5-2 5-2 1.3 0 1.9.5 2.5 1"/><path d="M2 18c.6.5 1.2 1 2.5 1 2.5 0 2.5-2 5-2 2.6 0 2.4 2 5 2 2.5 0 2.5-2 5-2 1.3 0 1.9.5 2.5 1"/></svg></span>
                 <small>Piscina</small>
               </div>
             </div>
@@ -119,17 +118,20 @@
             <!-- Formulario de reserva -->
             <form id="frmReservar">
               <div class="mb-2">
-                <label for="fechaInicio" class="form-label">📅 Fecha de entrada</label>
+                <label for="NombreCliente" class="form-label"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-user-round-icon lucide-user-round"><circle cx="12" cy="8" r="5"/><path d="M20 21a8 8 0 0 0-16 0"/></svg> Nombre: </label>
+               <input type="text" id="nombreReserva1" name="nombre" class="form-control" required>
+              </div>
+                <label for="fechaInicio" class="form-label"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-calendar-icon lucide-calendar"><path d="M8 2v4"/><path d="M16 2v4"/><rect width="18" height="18" x="3" y="4" rx="2"/><path d="M3 10h18"/></svg> Fecha de entrada</label>
                 <input type="date" id="fechaInicio" name="fechaInicio" class="form-control" required>
               </div>
 
               <div class="mb-2">
-                <label for="fechaFin" class="form-label">📅 Fecha de salida</label>
+                <label for="fechaFin" class="form-label"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-calendar-icon lucide-calendar"><path d="M8 2v4"/><path d="M16 2v4"/><rect width="18" height="18" x="3" y="4" rx="2"/><path d="M3 10h18"/></svg> Fecha de salida</label>
                 <input type="date" id="fechaFin" name="fechaFin" class="form-control" required>
               </div>
 
               <div class="mb-3">
-                <label for="guests" class="form-label">👥 Número de huéspedes</label>
+                <label for="guests" class="form-label"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-person-standing-icon lucide-person-standing"><circle cx="12" cy="5" r="1"/><path d="m9 20 3-6 3 6"/><path d="m6 8 6 2 6-2"/><path d="M12 10v4"/></svg> Número de huéspedes</label>
                 <input type="number" id="guests" name="guests" class="form-control" min="1" max="9" value="2" required>
               </div>
 
@@ -170,19 +172,19 @@
             <!-- Características -->
             <div class="row text-center mb-3 mt-3">
               <div class="col-3 d-flex flex-column align-items-center gap-1" style="font-size: 0.9rem;">
-                <span>🛏️</span>
+                <span><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-bed-icon lucide-bed"><path d="M2 4v16"/><path d="M2 8h18a2 2 0 0 1 2 2v10"/><path d="M2 17h20"/><path d="M6 8v9"/></svg></span>
                 <small>1 cama</small>
               </div>
               <div class="col-3 d-flex flex-column align-items-center gap-1" style="font-size: 0.9rem;">
-                <span>🍽️</span>
+                <span><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-cup-soda-icon lucide-cup-soda"><path d="m6 8 1.75 12.28a2 2 0 0 0 2 1.72h4.54a2 2 0 0 0 2-1.72L18 8"/><path d="M5 8h14"/><path d="M7 15a6.47 6.47 0 0 1 5 0 6.47 6.47 0 0 0 5 0"/><path d="m12 8 1-6h2"/></svg></span>
                 <small>Desayuno</small>
               </div>
               <div class="col-3 d-flex flex-column align-items-center gap-1" style="font-size: 0.9rem;">
-                <span>❄️</span>
+                <span><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-air-vent-icon lucide-air-vent"><path d="M18 17.5a2.5 2.5 0 1 1-4 2.03V12"/><path d="M6 12H4a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h16a2 2 0 0 1 2 2v5a2 2 0 0 1-2 2h-2"/><path d="M6 8h12"/><path d="M6.6 15.572A2 2 0 1 0 10 17v-5"/></svg></span>
                 <small>AC</small>
               </div>
               <div class="col-3 d-flex flex-column align-items-center gap-1" style="font-size: 0.9rem;">
-                <span>🏊‍♂️</span>
+                <span><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-waves-icon lucide-waves"><path d="M2 6c.6.5 1.2 1 2.5 1C7 7 7 5 9.5 5c2.6 0 2.4 2 5 2 2.5 0 2.5-2 5-2 1.3 0 1.9.5 2.5 1"/><path d="M2 12c.6.5 1.2 1 2.5 1 2.5 0 2.5-2 5-2 2.6 0 2.4 2 5 2 2.5 0 2.5-2 5-2 1.3 0 1.9.5 2.5 1"/><path d="M2 18c.6.5 1.2 1 2.5 1 2.5 0 2.5-2 5-2 2.6 0 2.4 2 5 2 2.5 0 2.5-2 5-2 1.3 0 1.9.5 2.5 1"/></svg></span>
                 <small>Piscina</small>
               </div>
             </div>
@@ -190,17 +192,22 @@
             <!-- Formulario de reserva -->
             <form id="frmReservar2">
               <div class="mb-2">
-                <label for="fechaInicio" class="form-label">📅 Fecha de entrada</label>
+                <label for="NombreCliente" class="form-label"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-user-round-icon lucide-user-round"><circle cx="12" cy="8" r="5"/><path d="M20 21a8 8 0 0 0-16 0"/></svg> Nombre: </label>
+                <input type="text" id="nombreReserva2" name="nombre" class="form-control" required>
+              </div>
+
+              <div class="mb-2">
+                <label for="fechaInicio" class="form-label"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-calendar-icon lucide-calendar"><path d="M8 2v4"/><path d="M16 2v4"/><rect width="18" height="18" x="3" y="4" rx="2"/><path d="M3 10h18"/></svg> Fecha de entrada</label>
                 <input type="date" id="fechaInicio2" name="fechaInicio" class="form-control" required>
               </div>
 
               <div class="mb-2">
-                <label for="fechaFin" class="form-label">📅 Fecha de salida</label>
+                <label for="fechaFin" class="form-label"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-calendar-icon lucide-calendar"><path d="M8 2v4"/><path d="M16 2v4"/><rect width="18" height="18" x="3" y="4" rx="2"/><path d="M3 10h18"/></svg> Fecha de salida</label>
                 <input type="date" id="fechaFin2" name="fechaFin" class="form-control" required>
               </div>
 
               <div class="mb-3">
-                <label for="guests" class="form-label">👥 Número de huéspedes</label>
+                <label for="guests" class="form-label"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-person-standing-icon lucide-person-standing"><circle cx="12" cy="5" r="1"/><path d="m9 20 3-6 3 6"/><path d="m6 8 6 2 6-2"/><path d="M12 10v4"/></svg> Número de huéspedes</label>
                 <input type="number" id="guests2" name="guests" class="form-control" min="1" max="9" value="2" required>
               </div>
 
@@ -241,37 +248,44 @@
             <!-- Características -->
             <div class="row text-center mb-3 mt-3">
               <div class="col-3 d-flex flex-column align-items-center gap-1" style="font-size: 0.9rem;">
-                <span>🛏️</span>
+                <span><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-bed-icon lucide-bed"><path d="M2 4v16"/><path d="M2 8h18a2 2 0 0 1 2 2v10"/><path d="M2 17h20"/><path d="M6 8v9"/></svg></span>
                 <small>1 cama</small>
               </div>
               <div class="col-3 d-flex flex-column align-items-center gap-1" style="font-size: 0.9rem;">
-                <span>🍽️</span>
+                <span><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-cup-soda-icon lucide-cup-soda"><path d="m6 8 1.75 12.28a2 2 0 0 0 2 1.72h4.54a2 2 0 0 0 2-1.72L18 8"/><path d="M5 8h14"/><path d="M7 15a6.47 6.47 0 0 1 5 0 6.47 6.47 0 0 0 5 0"/><path d="m12 8 1-6h2"/></svg></span>
                 <small>Desayuno</small>
               </div>
               <div class="col-3 d-flex flex-column align-items-center gap-1" style="font-size: 0.9rem;">
-                <span>❄️</span>
+                <span><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-air-vent-icon lucide-air-vent"><path d="M18 17.5a2.5 2.5 0 1 1-4 2.03V12"/><path d="M6 12H4a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h16a2 2 0 0 1 2 2v5a2 2 0 0 1-2 2h-2"/><path d="M6 8h12"/><path d="M6.6 15.572A2 2 0 1 0 10 17v-5"/></svg></span>
                 <small>AC</small>
               </div>
               <div class="col-3 d-flex flex-column align-items-center gap-1" style="font-size: 0.9rem;">
-                <span>🏊‍♂️</span>
+               <span><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-waves-icon lucide-waves"><path d="M2 6c.6.5 1.2 1 2.5 1C7 7 7 5 9.5 5c2.6 0 2.4 2 5 2 2.5 0 2.5-2 5-2 1.3 0 1.9.5 2.5 1"/><path d="M2 12c.6.5 1.2 1 2.5 1 2.5 0 2.5-2 5-2 2.6 0 2.4 2 5 2 2.5 0 2.5-2 5-2 1.3 0 1.9.5 2.5 1"/><path d="M2 18c.6.5 1.2 1 2.5 1 2.5 0 2.5-2 5-2 2.6 0 2.4 2 5 2 2.5 0 2.5-2 5-2 1.3 0 1.9.5 2.5 1"/></svg></span>
                 <small>Piscina</small>
               </div>
             </div>
 
             <!-- Formulario de reserva -->
             <form id="frmReservar3">
+
               <div class="mb-2">
-                <label for="fechaInicio" class="form-label">📅 Fecha de entrada</label>
+                <label for="NombreCliente" class="form-label"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-user-round-icon lucide-user-round"><circle cx="12" cy="8" r="5"/><path d="M20 21a8 8 0 0 0-16 0"/></svg> Nombre: </label>
+                <input type="text" id="nombreReserva3" name="nombre" class="form-control" required>
+              </div>
+
+
+              <div class="mb-2">
+                <label for="fechaInicio" class="form-label"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-calendar-icon lucide-calendar"><path d="M8 2v4"/><path d="M16 2v4"/><rect width="18" height="18" x="3" y="4" rx="2"/><path d="M3 10h18"/></svg> Fecha de entrada</label>
                 <input type="date" id="fechaInicio3" name="fechaInicio" class="form-control" required>
               </div>
 
               <div class="mb-2">
-                <label for="fechaFin" class="form-label">📅 Fecha de salida</label>
+                <label for="fechaFin" class="form-label"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-calendar-icon lucide-calendar"><path d="M8 2v4"/><path d="M16 2v4"/><rect width="18" height="18" x="3" y="4" rx="2"/><path d="M3 10h18"/></svg> Fecha de salida</label>
                 <input type="date" id="fechaFin3" name="fechaFin" class="form-control" required>
               </div>
 
               <div class="mb-3">
-                <label for="guests" class="form-label">👥 Número de huéspedes</label>
+                <label for="guests" class="form-label"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-person-standing-icon lucide-person-standing"><circle cx="12" cy="5" r="1"/><path d="m9 20 3-6 3 6"/><path d="m6 8 6 2 6-2"/><path d="M12 10v4"/></svg> Número de huéspedes</label>
                 <input type="number" id="guests3" name="guests" class="form-control" min="1" max="9" value="2" required>
               </div>
 
@@ -285,6 +299,7 @@
 
   <div id="reservaActiva" class="card margin" style="display: none;">
   <h4>Tu próxima reserva</h4>
+  <p><strong>Nombre:</strong> <span id="Nombre"></span></p>
   <p><strong>Check-in:</strong> <span id="checkIn"></span></p>
   <p><strong>Check-out:</strong> <span id="checkOut"></span></p>
   <p><strong>Huéspedes:</strong> <span id="huespedes"></span></p>
@@ -298,7 +313,7 @@
     <div id="historialModal" class="historial-modal">
   <div class="historial-content">
     <span class="historial-close" id="cerrarHistorial">&times;</span>
-    <h4>🕓 Historial de Reservas</h4>
+    <h4> Historial de Reservas</h4>
     <div id="historialReservas" class="historial-grid"></div>
   </div>
 </div>
@@ -308,6 +323,7 @@
     <h3><b>&copy; Derechos Reservados a Finder</b></h3>
   </footer>
   <script src="js/Dashboard.js"></script>
+  <script src="js/themes.js"></script>
 </body>
 
 </html>
