--- a/Proyecto Movil PTC/MisReseñas.html
+++ b/Proyecto Movil PTC/MisReseñas.html
@@ -1,4 +1,4 @@
-<html lang="en">
+<html lang="en" data-theme="auto">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,10 +8,24 @@
 </head>
 <body>
 
+  <nav class="container-fluid nav-container">
+    <div class="logo">
+      <img src="img/finder2.png" alt="Logo" />
+    </div>
+
+    <button class="hamburger" id="hamburger" aria-label="Abrir menú">
+      ☰
+    </button>
+
+    <ul class="nav-links" id="nav-links">
+      <li><a style="color: black;" href="Dashboard.html">Inicio</a></li>
+      <li><a style="color: black;" href="MyPerfil.html">Mi Perfil</a></li>
+      <li><a style="color: black;" href="MisReseñas.html">Comentarios</a></li>
+    </ul>
+  </nav>
+
   <main class="container">
     <section>
-      <h2 class="text-center">Resumen de la reseña</h2>
-      <img src="img/finder.png" alt="logo" style="height: 35px;">
       <div class="grafico">
         <canvas id="graficoCircular" width="160" height="160"></canvas>
         <div class="puntuacion-media">
@@ -20,8 +34,7 @@
         </div>
       </div>
       <div class="detalle-calificaciones">
-        <span>Location: <strong id="locationScore">0.0</strong></span>
-        <span>Service: <strong id="serviceScore">0.0</strong></span>
+        <span>Servicios: <strong id="serviceScore">0.0</strong></span>
       </div>
     </section>
 
@@ -37,7 +50,6 @@
             <input type="text" placeholder="Nombre" id="nombre" required>
             <textarea placeholder="Comentario" id="comentario" required></textarea>
             <input type="number" step="0.1" placeholder="Puntuación (1-5)" min="1" max="5" id="puntuacion" required>
-            <input type="number" step="0.1" placeholder="Location (1-5)" min="1" max="5" id="location" required>
             <input type="number" step="0.1" placeholder="Service (1-5)" min="1" max="5" id="service" required>
             <button type="submit">Agregar</button>
           </form>
@@ -54,5 +66,6 @@
 
 
   <script src="js/reseñas.js"></script>
+  <script src="js/themes.js"></script>
 </body>
 </html>
