--- a/Proyecto Movil PTC/MisReseñas.html
+++ b/Proyecto Movil PTC/MisReseñas.html
@@ -10,19 +10,31 @@
 
   <nav class="container-fluid nav-container">
     <div class="logo">
-      <img src="img/finder2.png" alt="Logo" />
+      <img src="img/finder3.png" alt="Logo" />
     </div>
-
-    <button class="hamburger" id="hamburger" aria-label="Abrir menú">
-      ☰
-    </button>
-
-    <ul class="nav-links" id="nav-links">
-      <li><a style="color: black;" href="Dashboard.html">Inicio</a></li>
-      <li><a style="color: black;" href="MyPerfil.html">Mi Perfil</a></li>
-      <li><a style="color: black;" href="MisReseñas.html">Comentarios</a></li>
-    </ul>
   </nav>
+
+  <nav class="mobile-nav">
+    <a href="Dashboard.html" class="nav-item active" data-tab="home">
+      <i class="fas fa-home"></i>
+      <span><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-house-icon lucide-house"><path d="M15 21v-8a1 1 0 0 0-1-1h-4a1 1 0 0 0-1 1v8"/><path d="M3 10a2 2 0 0 1 .709-1.528l7-5.999a2 2 0 0 1 2.582 0l7 5.999A2 2 0 0 1 21 10v9a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z"/></svg></span>
+    </a>
+    <a href="MisReseñas.html" class="nav-item" data-tab="search">
+      <i class="fas fa-search"></i>
+      <span><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-star-icon lucide-star"><path d="M11.525 2.295a.53.53 0 0 1 .95 0l2.31 4.679a2.123 2.123 0 0 0 1.595 1.16l5.166.756a.53.53 0 0 1 .294.904l-3.736 3.638a2.123 2.123 0 0 0-.611 1.878l.882 5.14a.53.53 0 0 1-.771.56l-4.618-2.428a2.122 2.122 0 0 0-1.973 0L6.396 21.01a.53.53 0 0 1-.77-.56l.881-5.139a2.122 2.122 0 0 0-.611-1.879L2.16 9.795a.53.53 0 0 1 .294-.906l5.165-.755a2.122 2.122 0 0 0 1.597-1.16z"/></svg></span>
+    </a>
+
+    <a href="Reservas.html" class="nav-item" data-tab="reserva">
+      <i class="fas fa-user"></i>
+      <span><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-book-marked-icon lucide-book-marked"><path d="M10 2v8l3-3 3 3V2"/><path d="M4 19.5v-15A2.5 2.5 0 0 1 6.5 2H19a1 1 0 0 1 1 1v18a1 1 0 0 1-1 1H6.5a1 1 0 0 1 0-5H20"/></svg></span>
+    </a>
+
+    <a href="MyPerfil.html" class="nav-item" data-tab="profile">
+      <i class="fas fa-user"></i>
+      <span><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-user-icon lucide-user"><path d="M19 21v-2a4 4 0 0 0-4-4H9a4 4 0 0 0-4 4v2"/><circle cx="12" cy="7" r="4"/></svg></span>
+    </a>
+  </nav>
+
 
   <main class="container">
     <section>
@@ -39,7 +51,7 @@
     </section>
 
     <section>
-      <button id="abrirFormulario">+ Nueva Reseña</button>
+      <button style="background-color: #4CAF50;" id="abrirFormulario">+ Nueva Reseña</button>
       <dialog id="modalResena">
         <article class="pestaña">
           <header>
@@ -51,7 +63,7 @@
             <textarea placeholder="Comentario" id="comentario" required></textarea>
             <input type="number" step="0.1" placeholder="Puntuación (1-5)" min="1" max="5" id="puntuacion" required>
             <input type="number" step="0.1" placeholder="Service (1-5)" min="1" max="5" id="service" required>
-            <button type="submit">Agregar</button>
+            <button type="submit" style="background-color: #4CAF50;">Agregar</button>
           </form>
         </article>
       </dialog>
