Dashboard casi terminado

--- a/Proyecto Movil PTC/Dashboard.html
+++ b/Proyecto Movil PTC/Dashboard.html
@@ -27,44 +27,9 @@
   </div>
 </nav>
 
-<main class="content">
-  <h2>Your next trips</h2>
-  <div class="card-grid">
-    <div class="card">
-      <img src="https://images.unsplash.com/photo-1518684079434-c3b6590886f4?..." alt="Paris, France">
-      <div class="card-info">
-        <h3>Paris, France</h3>
-        <p>Starting from $1200</p>
-        <button class="reserve-btn">Reservar</button>
-      </div>
-    </div>
-    <div class="card">
-      <img src="https://images.unsplash.com/photo-1542662057-5b658d511855?..." alt="Bermuda Triangle">
-      <div class="card-info">
-        <h3>Bermuda Triangle</h3>
-        <p>Starting from $1800</p>
-        <button class="reserve-btn">Reservar</button>
-      </div>
-    </div>
-    <div class="card">
-      <img src="img/finder.png" alt="Waterfall Adventure">
-      <div class="card-info">
-        <h3>Waterfall Adventure</h3>
-        <p>Starting from $850</p>
-        <button class="reserve-btn">Reservar</button>
-      </div>
-    </div>
-    <div class="card">
-      <img src="https://images.unsplash.com/photo-1522079031758-00a89d44e458?..." alt="Cityscape">
-      <div class="card-info">
-        <h3>Cityscape</h3>
-        <p>Starting from $950</p>
-        <button class="reserve-btn">Reservar</button>
-      </div>
-    </div>
-  </div>
-</main>
-
+<main class="wrap">
+    <section id="listings" class="stack"></section>
+  </main>
 
 
   <nav class="mobile-nav">
