--- a/Proyecto Movil PTC/MyPerfil.html
+++ b/Proyecto Movil PTC/MyPerfil.html
@@ -38,14 +38,15 @@
   </nav>
 
     <main class="container profile-container" id="perfil-container">
-    <button class="close-form" id="cerrar-perfil" aria-label="Cerrar perfil">❌</button>
+    <button class="close-form" id="cerrar-perfil" aria-label="Cerrar perfil"></button>
 
     <div class="profile-header">
       <div class="profile-pic-wrapper">
         <img id="profile-pic" src="https://cdn-icons-png.flaticon.com/512/2922/2922506.png" alt="Foto de perfil" class="profile-pic">
       </div>
       <h4 class="name">Ana Camila Savaleta</h4>
-      <p class="contact">anacamilags@gmail.com | +01 234 567 89</p>
+      <p class="contact">anacamilags@gmail.com</p>
+        <p class="contact">+01 234 567 89</p>
     </div>
 
     <div class="card-grid">
