--- a/Proyecto Movil PTC/Dashboard.html
+++ b/Proyecto Movil PTC/Dashboard.html
@@ -80,19 +80,23 @@
       <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-hotel-icon lucide-hotel"><path d="M10 22v-6.57"/><path d="M12 11h.01"/><path d="M12 7h.01"/><path d="M14 15.43V22"/><path d="M15 16a5 5 0 0 0-6 0"/><path d="M16 11h.01"/><path d="M16 7h.01"/><path d="M8 11h.01"/><path d="M8 7h.01"/><rect x="4" y="2" width="16" height="20" rx="2"/></svg>
       <div class="mf-card-col">
         <h2 id="mf-room-title" class="mf-h2">Habitación</h2>
-        <div class="mf-subtle"><svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-star-icon lucide-star"><path d="M11.525 2.295a.53.53 0 0 1 .95 0l2.31 4.679a2.123 2.123 0 0 0 1.595 1.16l5.166.756a.53.53 0 0 1 .294.904l-3.736 3.638a2.123 2.123 0 0 0-.611 1.878l.882 5.14a.53.53 0 0 1-.771.56l-4.618-2.428a2.122 2.122 0 0 0-1.973 0L6.396 21.01a.53.53 0 0 1-.77-.56l.881-5.139a2.122 2.122 0 0 0-.611-1.879L2.16 9.795a.53.53 0 0 1 .294-.906l5.165-.755a2.122 2.122 0 0 0 1.597-1.16z"/></svg> Favorito entre huéspedes</div>
+        <div class="mf-subtle">
+          <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-star-icon lucide-star"><path d="M11.525 2.295a.53.53 0 0 1 .95 0l2.31 4.679a2.123 2.123 0 0 0 1.595 1.16l5.166.756a.53.53 0 0 1 .294.904l-3.736 3.638a2.123 2.123 0 0 0-.611 1.878l.882 5.14a.53.53 0 0 1-.771.56l-4.618-2.428a2.122 2.122 0 0 0-1.973 0L6.396 21.01a.53.53 0 0 1-.77-.56l.881-5.139a2.122 2.122 0 0 0-.611-1.879L2.16 9.795a.53.53 0 0 1 .294-.906l5.165-.755a2.122 2.122 0 0 0 1.597-1.16z"/></svg>
+          Favorito entre huéspedes
+        </div>
       </div>
     </div>
 
     <hr class="mf-divider">
 
-    <!-- DETALLES VIAJE como botón -->
     <div class="mf-row">
       <div>
         <div class="mf-label">Detalles del viaje</div>
         <button id="mf-trip-btn" class="mf-trip-btn" type="button" aria-haspopup="dialog" aria-expanded="false">
           Selecciona fechas
         </button>
+      </div>
+    </div>
 
     <!-- Inputs ocultos que viajan en el submit -->
     <input type="hidden" name="checkin" id="mf-checkin">
@@ -104,6 +108,8 @@
       <div>
         <div class="mf-label">Precio total</div>
         <div id="mf-room-price" class="mf-text">$0.00</div>
+      </div>
+    </div>
 
     <hr class="mf-divider">
 
@@ -116,6 +122,7 @@
     </div>
   </div>
 </section>
+
 
 <!-- Panel de fechas dentro del modal -->
 <div id="mf-trip-panel" class="mf-trip-panel" role="dialog" aria-modal="true" aria-hidden="true">
@@ -216,14 +223,6 @@
     <h2 id="modal-title"></h2>
     <p id="modal-desc"></p>
     <p id="modal-price"></p>
-
-    <!-- Sección reseñas -->
-    <div id="modal-reviews">
-      <h3>Reseñas ⭐</h3>
-      <ul id="reviews-list"></ul>
-    </div>
-  </div>
-</div>
 
 
       <!-- Footer -->
