--- a/Proyecto Movil PTC/MyPerfil.html
+++ b/Proyecto Movil PTC/MyPerfil.html
@@ -31,6 +31,11 @@
       <span><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-book-marked-icon lucide-book-marked"><path d="M10 2v8l3-3 3 3V2"/><path d="M4 19.5v-15A2.5 2.5 0 0 1 6.5 2H19a1 1 0 0 1 1 1v18a1 1 0 0 1-1 1H6.5a1 1 0 0 1 0-5H20"/></svg></span>
     </a>
 
+    <a href="MyPerfil.html" class="nav-item" data-tab="profile">
+      <i class="fas fa-user"></i>
+      <span><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-user-icon lucide-user"><path d="M19 21v-2a4 4 0 0 0-4-4H9a4 4 0 0 0-4 4v2"/><circle cx="12" cy="7" r="4"/></svg></span>
+    </a>
+  </nav>
 
     <main class="container profile-container" id="perfil-container">
     <button class="close-form" id="cerrar-perfil" aria-label="Cerrar perfil"></button>
